<resources>
    <string name="app_name">Memory Companion</string>
    <string name="add_questions">Add Questions</string>
    <string name="category">Category</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="create_question">Create Question</string>
    <string name="question_image">Question Image</string>
    <string name="questionText">TextView</string>
    <string name="back">Back</string>
    <string name="start">Start</string>
    <string name="default_filter_name">Default Filter Name</string>
    <string name="submit">Submit</string>
</resources>